--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	</header>
 	<main>
 		<div id="banner">
-			<img id="banner-img" class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
-			<p id="tag-line">Impressions tous formats <span>en boutique et en ligne</span></p>
+			<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
+			<p class="tagLine">Impressions tous formats <span>en boutique et en ligne</span></p>
 			<img class="arrow arrow_left" src="./assets/images/arrow_left.png" alt="Flèche gauche">
 			<img class="arrow arrow_right" src="./assets/images/arrow_right.png" alt="Flèche droite">
 			<div class="dots">
